Revision history for Perl extension Data::Tools

1.45 2024-11-08

   - Data::Tools::Time adds new functions:
                julian_date_goto_first_dow
                julian_date_goto_last_dow
                utime_goto_first_dow
                utime_goto_last_dow
                julian_date_to_iso
                julian_date_from_iso
                utime_to_iso
                utime_from_iso
                utime_to_iso_ext
                utime_from_iso_ext
                utime_get_woy
    
   - added file_lock_*() set of functions to handle advisory locking
   - added functions for handling pid files: create and remove
   - pid files creation may act as single process locking


1.44 2024-06-08

   - added BCD conversion functions

1.43 2024-03-23

   - added Data::Tools::Process module for process management
   - added daemonize() function in Data::Tools::Process
   - moved cmd_fork_exec() from Data::Tools to Data::Tools::Process

1.42 2023-08-15

   - version and git repo cleanup

1.41 2023-08-11

    - added new plain hash key=value protocol to Data::Tools::Socket::Protocols.

1.40 2023-07-08

    - added Data::Tools::Socket::Protocols

1.30 2022-05-18

    Data::Tools::CSV
    
    - added optional parameter to specify different delimiter (default ',').

1.29 2022-04-17

    Data::Tools::Time

    - added definition of julian_date_from_utime()
    - make julian_date_from_ymd( year, month, day ) to allow optional day, or month and day
    - added julian_date_from_md( month, day )

1.28 2022-04-04

    - CSV parse code fixed to handle trailing fields with wrong count of "s
    - added more information to Data::Tools::CSV

1.27 2022-04-02

    - added Data::Tools::CSV modules for parsing RFC4180 style CSV files.

1.25 2022-02-08

    - added new ftwalk
    - fixed str_html_escape (well typo)

1.24 2020-06-22

    - reimplemented str_hex/unhex to use unpack/pack (of course!)
         thanks to String::HexConvert for reminding me that pack 