@@ -1,0 +1,10 @@
+#!/usr/bin/perl
+use strict;
+use lib '.', '../lib';
+use Data::Tools;
+use Data::Dumper;
+
+
+print int2hex(176);
+print hex2int('B0');
+#print hex('B0')
