@@ -1,5 +1,10 @@
 Revision history for Perl extension Data::Tools
 
+x.xx 2024-11-xx
+
+   - Data::Tools adds new functions:
+                format_ascii_table()
+
 1.45 2024-11-08
 
    - Data::Tools::Time adds new functions:
